@@ -24,37 +24,52 @@ module Annotations
         # Helper finder to get all annotations for an object of the mixin source type with the ID provided.
         # This is the same as +#annotations+ on the object, with the added benefit that the object doesnt have to be loaded.
         # E.g: +User.find_annotations_by(10)+ will give all annotations by User with ID 34.
-        def annotations_by(id)
+        def annotations_by(id, include_values=false)
           obj_type = ActiveRecord::Base.send(:class_name_of_active_record_descendant, self).to_s
           
-          Annotation.find(:all,
-                          :conditions => { :source_type =>  obj_type, 
-                                           :source_id => id },
-                          :order => "updated_at DESC")
+          options = {
+            :conditions => { :source_type =>  obj_type, 
+                             :source_id => id },
+            :order => "updated_at DESC"
+          }
+          
+          options[:include] = [ :value ] if include_values
+          
+          Annotation.find(:all, options)
         end
         
         # Helper finder to get all annotations for all objects of the mixin source type, for the annotatable object provided.
         # E.g: +User.find_annotations_for('Book', 28)+ will give all annotations made by all Users for Book with ID 28. 
-        def annotations_for(annotatable_type, annotatable_id)
+        def annotations_for(annotatable_type, annotatable_id, include_values=false)
           obj_type = ActiveRecord::Base.send(:class_name_of_active_record_descendant, self).to_s
           
-          Annotation.find(:all,
-                          :conditions => { :source_type => obj_type,
-                                           :annotatable_type =>  annotatable_type, 
-                                           :annotatable_id => annotatable_id },
-                          :order => "updated_at DESC")
+          options = {
+            :conditions => { :source_type => obj_type,
+                             :annotatable_type =>  annotatable_type, 
+                             :annotatable_id => annotatable_id },
+            :order => "updated_at DESC"
+          }
+          
+          options[:include] = [ :value ] if include_values
+          
+          Annotation.find(:all, options)
         end
       end
       
       # This module contains instance methods
       module InstanceMethods
         # Helper method to get latest annotations
-        def latest_annotations(limit=nil)
-          Annotation.find(:all,
-                          :conditions => { :source_type =>  self.class.name, 
-                                           :source_id => id },
-                          :order => "updated_at DESC",
-                          :limit => limit)
+        def latest_annotations(limit=nil, include_values=false)
+          options = {
+            :conditions => { :source_type =>  self.class.name, 
+                             :source_id => id },
+            :order => "updated_at DESC",
+            :limit => limit
+          }
+          
+          options[:include] = [ :value ] if include_values
+          
+          Annotation.find(:all, options)
         end
         
         def annotation_source_name
