@@ -11,16 +11,24 @@ class ActsAsAnnotatableTest < ActiveSupport::TestCase
   
   def test_find_annotations_for_class_method
     assert_equal 6, Book.find_annotations_for(books(:h).id).length
+    assert_equal 6, Book.find_annotations_for(books(:h).id, true).length
     assert_equal 5, Book.find_annotations_for(books(:r).id).length
+    assert_equal 5, Book.find_annotations_for(books(:r).id, true).length
     assert_equal 2, Chapter.find_annotations_for(chapters(:bh_c10).id).length
-    assert_equal 4, Chapter.find_annotations_for(chapters(:br_c2).id).length 
+    assert_equal 2, Chapter.find_annotations_for(chapters(:bh_c10).id, true).length
+    assert_equal 4, Chapter.find_annotations_for(chapters(:br_c2).id).length
+    assert_equal 4, Chapter.find_annotations_for(chapters(:br_c2).id, true).length
   end
   
   def test_find_annotations_by_class_method
     assert_equal 4, Book.find_annotations_by("User", users(:jane)).length
+    assert_equal 4, Book.find_annotations_by("User", users(:jane), true).length
     assert_equal 1, Book.find_annotations_by("Group", groups(:sci_fi_geeks)).length
+    assert_equal 1, Book.find_annotations_by("Group", groups(:sci_fi_geeks), true).length
     assert_equal 3, Chapter.find_annotations_by("User", users(:john)).length
+    assert_equal 3, Chapter.find_annotations_by("User", users(:john), true).length
     assert_equal 2, Chapter.find_annotations_by("Group", groups(:classical_fans)).length
+    assert_equal 2, Chapter.find_annotations_by("Group", groups(:classical_fans), true).length
   end
   
   def test_annotatable_name_field_class_attribute
@@ -38,37 +46,56 @@ class ActsAsAnnotatableTest < ActiveSupport::TestCase
   
   def test_latest_annotations_instance_method
     assert_equal 6, books(:h).latest_annotations.length
+    assert_equal 6, books(:h).latest_annotations(nil, true).length
     assert_equal 2, chapters(:bh_c10).latest_annotations.length
+    assert_equal 2, chapters(:bh_c10).latest_annotations(nil, true).length
     
     assert_equal 2, books(:h).latest_annotations(2).length
+    assert_equal 2, books(:h).latest_annotations(2, true).length
   end
   
   def test_annotations_with_attribute_instance_method
     assert_equal 2, books(:h).annotations_with_attribute("tag").length
+    assert_equal 2, books(:h).annotations_with_attribute("tag", true).length
     assert_equal 0, books(:r).annotations_with_attribute("doesnt_exist").length
+    assert_equal 0, books(:r).annotations_with_attribute("doesnt_exist", true).length
     assert_equal 1, chapters(:bh_c10).annotations_with_attribute("endingType").length
+    assert_equal 1, chapters(:bh_c10).annotations_with_attribute("endingType", true).length
     assert_equal 1, chapters(:br_c202).annotations_with_attribute("Title").length
+    assert_equal 1, chapters(:br_c202).annotations_with_attribute("Title", true).length
   end
   
   def test_annotations_with_attributes_instance_method
     assert_equal 4, books(:h).annotations_with_attributes([ "tag", "summary", "LENGTH" ]).length
+    assert_equal 4, books(:h).annotations_with_attributes([ "tag", "summary", "LENGTH" ], true).length
     assert_equal 0, books(:h).annotations_with_attributes([ "doesnt_exist", "also doesn't exist" ]).length
+    assert_equal 0, books(:h).annotations_with_attributes([ "doesnt_exist", "also doesn't exist" ], true).length
     assert_equal 1, chapters(:bh_c10).annotations_with_attributes([ "endingType" ]).length
+    assert_equal 1, chapters(:bh_c10).annotations_with_attributes([ "endingType" ], true).length
     assert_equal 2, chapters(:br_c202).annotations_with_attributes([ "Title", "complexity", "doesn't exist but still"]).length
+    assert_equal 2, chapters(:br_c202).annotations_with_attributes([ "Title", "complexity", "doesn't exist but still"], true).length
   end
   
   def test_annotations_with_attribute_and_by_source_instance_method
     assert_equal 1, books(:h).annotations_with_attribute_and_by_source("tag", users(:jane)).length
+    assert_equal 1, books(:h).annotations_with_attribute_and_by_source("tag", users(:jane), true).length
     assert_equal 0, books(:r).annotations_with_attribute_and_by_source("doesnt_exist", users(:jane)).length
+    assert_equal 0, books(:r).annotations_with_attribute_and_by_source("doesnt_exist", users(:jane), true).length
     assert_equal 1, chapters(:bh_c10).annotations_with_attribute_and_by_source("endingType", groups(:sci_fi_geeks)).length
+    assert_equal 1, chapters(:bh_c10).annotations_with_attribute_and_by_source("endingType", groups(:sci_fi_geeks), true).length
     assert_equal 1, chapters(:br_c202).annotations_with_attribute_and_by_source("Title", users(:john)).length
+    assert_equal 1, chapters(:br_c202).annotations_with_attribute_and_by_source("Title", users(:john), true).length
   end
   
   def test_all_annotations_excluding_attributes
     assert_equal 4, books(:h).all_annotations_excluding_attributes([ "TITLE", "length" ]).length
+    assert_equal 4, books(:h).all_annotations_excluding_attributes([ "TITLE", "length" ], true).length
     assert_equal 5, books(:r).all_annotations_excluding_attributes([ "doesnt_exist" ]).length
+    assert_equal 5, books(:r).all_annotations_excluding_attributes([ "doesnt_exist" ], true).length
     assert_equal 1, chapters(:bh_c10).all_annotations_excluding_attributes([ "endingType" ]).length
+    assert_equal 1, chapters(:bh_c10).all_annotations_excluding_attributes([ "endingType" ], true).length
     assert_equal 2, chapters(:br_c202).all_annotations_excluding_attributes([ "tag", "doesn't exist but who cares" ]).length
+    assert_equal 2, chapters(:br_c202).all_annotations_excluding_attributes([ "tag", "doesn't exist but who cares" ], true).length
   end
   
   def test_count_annotations_by_instance_method
