@@ -2,6 +2,7 @@
 
 == 0.4.1
 * Add +Annotation::include_values+ as a named scope that can be used to potentially improve performance.
+* Added +include_values+ optional argument (default: false) to as many finder methods. This allows you to specify whether value records must be included in the query results or not, and *may* be used to improve performance.
 
 == 0.4.0
 * New config option: +Annotations::Config.value_factories+ - support for value object generation factories per attribute name.
